@@ -143,7 +143,7 @@ Example F: a seismically-isolated building model (units: N, mm, ton)
 1                               # 1: include shear deformation
 1                               # 1: include geometric stiffness
 2000                            # exaggerate static mesh deformations
-1.0                             # x-axis increment for internal force data
+50.0                            # x-axis increment for internal force data
 
 
 
