@@ -59,7 +59,7 @@ Example G: a building with a set-back  (in,kip)
 1                               # 1: include shear deformation
 1                               # 1: include geometric stiffness
 2.0                             # exaggerate static mesh deformations
-1.0                             # x-axis increment for internal force data
+12.0                            # x-axis increment for internal force data
 
 
 1			# number of static load cases
