@@ -593,7 +593,7 @@ Example H: a pedestrian ramp  (kip, in)
 1                               # 1: include shear deformation
 1                               # 1: include geometric stiffness
 100.0                           # exaggerate static mesh deformations
-1.0                             # x-axis increment for internal force data
+-1.0                            # no internal force calculation
 
 
 1			# number of static load cases
